@@ -1,3 +1,8 @@
+2012-02-01  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/pj_apply_gridshift.c: ensure we try to use grids as long as we
+	are within epsilon of the edge (#141). 
+
 2012-01-31  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/nad2bin.c: fix comparison test for -f flag (#139).
